# ic3-labels

./: .coveragerc  .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: test_suite.yml
ic3_labels/: __about__.py  __init__.py
ic3_labels/labels/: base_module.py  modules.py
ic3_labels/labels/modules/: __init__.py  functions.py  modules.py
ic3_labels/labels/modules/event_generator/: multi_cascade_labels.py  muon_track_labels.py  utils.py  visualization.py
ic3_labels/labels/utils/: cascade.py  detector.py  general.py  geometry.py  geometry_scipy.py  high_level.py  muon.py  neutrino.py  shower_parameters.py  tau.py
ic3_labels/weights/: bias.py  fluxes_corsika.py  fluxes_muongun.py  fluxes_neutrino.py  mceq_models.py  mese_weights.py  modules.py  nuveto_models.py  segments.py  self_veto.py  utils.py
ic3_labels/weights/resources/: _hash_utils.py  cache_simprod_data.py  cashier.py  cashier_sqlite.py  fluxes.py
resources/visualization/: visualize_energy_losses.py
test/: test_import.py
